# bafiq

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  dev.md  justfile  plots.ipynb
.github/workflows/: build-reusable.yaml  build_and_upload_linux.yaml  pr-check.yaml
benches/: index.rs  index_build_bench.rs  unified.rs  view.rs
benches/benchmark/: cli.rs  index.rs  mod.rs  view.rs
benches/shared/: analysis.rs  commands.rs  mod.rs  orchestrator.rs
benchmark_results/: memory_samples.csv  thread_scaling.csv
docs/: dev.md  index-building-strategies.md  performance.md  plan.md  rayon-ultra-hints.rs
src/: bgzf.rs  lib.rs  main.rs  tmp.rs
src/benchmark/: mod.rs
src/compression/: delta.rs  dictionary.rs  mod.rs  sparse.rs
src/index/: builder.rs  compressed.rs  discovery.rs  format.rs  mod.rs
src/index/strategies/: adaptive_memory_mapped.rs  channel_pc.rs  chunk_streaming.rs  constant_memory.rs  htslib.rs  memory_friendly.rs  mod.rs  parallel_chunk_streaming.rs  parallel_streaming.rs  rayon_expert.rs  rayon_memory_optimized.rs  rayon_optimized.rs  rayon_streaming_optimized.rs  rayon_ultra_performance.rs  rayon_wait_free.rs  sequential.rs  shared.rs  work_stealing.rs  zero_merge.rs
src/query/: engine.rs  iterator.rs  mod.rs
src/view/: fast_count.rs  mod.rs
