[package]
name = "bafiq"
description = "BAM Flag Index Query tool"
version = "0.0.5"
edition = "2021"

[[bin]]
name = "bafiq"
path = "src/main.rs"

[[bin]]
name = "bafiq-bench"
path = "src/bin/bafiq-bench.rs"


[[bin]]
name = "bafiq-viewer"
path = "src/bin/viewer.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
crossbeam = "0.8"
libdeflater = "0.14"
memmap2 = "0.9"
num_cpus = "1.0"
rayon = "1.8"
rust-htslib = "0.48"
serde = { version = "1.0", features = ["derive"] }
flate2 = "*"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "csv_output"] }
tempfile = "3.0"

[[bench]]
name = "index_build_bench"
harness = false

# [profile.release]
# debug = true
