[package]
name = "bafiq"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Fast BAM flag indexing and querying"
repository = "https://github.com/honzakotrs/bafiq"

[[bin]]
name = "bafiq"
path = "src/main.rs"

[[bin]]
name = "viewer"
path = "src/bin/viewer.rs"

[[bench]]
name = "unified"
harness = false

[dependencies]
anyhow = "1.0"
rust-htslib = "0.47"
clap = { version = "4.5", features = ["derive"] }
libdeflater = { version = "0.14", features = ["use_rust_alloc"] }
libdeflate-sys = "0.14"
memmap2 = "0.9"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
rayon = "1.10"
memchr = "2.7"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
sysinfo = "0.30"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# Performance optimizations for SIMD and target-specific optimizations
[profile.bench]
inherits = "release"
debug = true
